--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,8 +11,8 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'npm cache clean --f'
-                sh 'npm install'
+                sh 'npm cache clean'
+                sh 'npm install --unsafe-perm=true --allow-root'
             }
         }
         stage('Test') {
