--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -12,7 +12,7 @@ pipeline {
     stages {
         stage('Build') {
             steps {
-                sh 'npm cache clean'
+                sh 'npm cache clean --force'
                 sh 'npm install --unsafe-perm=true --allow-root'
             }
         }
